--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.10</version> <!-- versão 2.7.x -->
+		<version>2.7.0</version> <!-- versão 2.7.x -->
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.swprojects</groupId>
@@ -46,8 +46,9 @@
 
 		<!-- mysql -->
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 
 		<!-- Flyway -->
