--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.show-sql=true
 
 # Falha se o JSON tiver propriedades que não existem na classe.
 spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=true
+
+spring.jackson.date-format=yyyy-MM-dd
