Depploy da API na nuvem

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=${DATABASE_URL}
+
 swfinancialapi.seguranca.enable-https=true
+
+swfinancialapi.origin-permitida=https://swfinancialapi-angular.herokuapp.com
