--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,1 +1,7 @@
+swfinancialapi.seguranca.enable-https=true
+
 spring.datasource.url=${DATABASE_URL}
+spring.datasource.username={DATABASE_USERNAME}
+spring.datasource.password={DATABASE_PASSWORD}
+
+swfinancialapi.origin-permitida=https://swfinancial-angular.herokuapp.com
