--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=${DATABASE_URL}
 
 swfinancialapi.origin-permitida=https://swfinancial-angular.herokuapp.com
+
+spring.flyway.enabled=false
