--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,5 @@ spring.jpa.open-in-view=true
 spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=true
 
 spring.jackson.date-format=yyyy-MM-dd
+
+spring.flyway.enabled=false
