--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,4 @@ spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=true
 
 spring.jackson.date-format=yyyy-MM-dd
 
-spring.flyway.enabled=false
+spring.flyway.baseline-on-migrate=true
