--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,21 @@
-spring.profiles.active=${APP_PROFILE:prod}
+# #MYSQL
+# spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+# spring.datasource.url=jdbc:mysql://localhost:3306/swfinancial_api?createDatabaseIfNotExist=true 
+# spring.datasource.username=${MYSQL_DATASOURCE_USERNAME}
+# spring.datasource.password=${MYSQL_DATASOURCE_PASSWORD}
 
-#MYSQL
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/swfinancial_api?createDatabaseIfNotExist=true 
-spring.datasource.username=${MYSQL_DATASOURCE_USERNAME}
-spring.datasource.password=${MYSQL_DATASOURCE_PASSWORD}
+# #JPA
+# spring.jpa.show-sql=true
 
-#JPA
+# POSTGRESQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/swfinancial_api?createDatabaseIfNotExist=true
+spring.datasource.username=${POSTGRES_DATASOURCE_USER}
+spring.datasource.password=${POSTGRES_DATASOURCE_PASSWORD}
+
+# JPA
+spring.jpa.hibernate.ddl-auto=none 
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
 
 # Falha se o JSON tiver propriedades que não existem na classe.
 spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=true
