--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,3 +5,8 @@ spring.datasource.url=${DATABASE_URL}
 swfinancialapi.origin-permitida=https://swfinancial-angular.herokuapp.com
 
 spring.flyway.enabled=false
+
+#JPA
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=false
+spring.jpa.open-in-view=true
