spring.jpa.hibernate.ddl-auto=none

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.datasource.username=${MYSQL_DATASOURCE_USERNAME}
 spring.datasource.password=${MYSQL_DATASOURCE_PASSWORD}
 
 #JPA
-spring.jpa.show-sql=true 
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none 
 
 # Falha se o JSON tiver propriedades que não existem na classe.
 spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=true
