--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,5 +4,7 @@ spring.datasource.url=${DATABASE_URL}
 
 swfinancialapi.origin-permitida=https://swfinancial-angular.herokuapp.com
 
+spring.flyway.enabled=false
+
 # JPA
 spring.jpa.hibernate.ddl-auto=none 
