--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,17 @@
-# #MYSQL
-# spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-# spring.datasource.url=jdbc:mysql://localhost:3306/swfinancial_api?createDatabaseIfNotExist=true 
-# spring.datasource.username=${MYSQL_DATASOURCE_USERNAME}
-# spring.datasource.password=${MYSQL_DATASOURCE_PASSWORD}
+#MYSQL
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/swfinancial_api?createDatabaseIfNotExist=true 
+spring.datasource.username=${MYSQL_DATASOURCE_USERNAME}
+spring.datasource.password=${MYSQL_DATASOURCE_PASSWORD}
 
-# #JPA
-# spring.jpa.show-sql=true
+#JPA
+spring.jpa.show-sql=true
 
 # Falha se o JSON tiver propriedades que não existem na classe.
 spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=true
 
 spring.jackson.date-format=yyyy-MM-dd
+
+spring.profiles.active=basic-security
+
+spring.profiles.group.prod=oauth-security
